--- a/playbooks/contrail-go/deploy-contrail.yaml
+++ b/playbooks/contrail-go/deploy-contrail.yaml
@@ -2,7 +2,7 @@
   hosts: localhost
   tasks:
   - name: Run deploy contrail script
-    command: ./tools/deploy-for_k8s.sh
+    command: ../../tools/deploy-for_k8s.sh
     when:
-      - should_deploy is defined
-      - should_deploy == "yes"
+      - contrail_type is defined
+      - contrail_type == "atom_api"
